fix(sass): improve contrast of header menu active/focus/hover state

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -25,7 +25,7 @@ $header-border-height: 2px;
     &:active,
     &:focus,
     &:hover {
-      background-color: $grey-color-light;
+      background-color: $background-color;
       color: #000;
       cursor: pointer;
       outline: 0;
